[gd_scene load_steps=7 format=2]

[ext_resource path="res://Pixeltype.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Sprites/PixelEgg.png" type="Texture" id=2]
[ext_resource path="res://InterfazJuego.gd" type="Script" id=3]
[ext_resource path="res://Sprites/Sol.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 110
outline_size = 3
outline_color = Color( 0.0235294, 0.0196078, 0.0196078, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 120
outline_size = 3
outline_color = Color( 0.0431373, 0.0392157, 0.0392157, 1 )
font_data = ExtResource( 1 )

[node name="InterfazJuego" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="ContadorHuevos" type="Label" parent="."]
margin_left = 898.0
margin_top = 17.0
margin_right = 1007.0
margin_bottom = 87.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PixelEgg" type="Sprite" parent="."]
position = Vector2( 882.113, 44.1084 )
scale = Vector2( 0.138318, 0.133747 )
texture = ExtResource( 2 )

[node name="Sol" type="TextureRect" parent="."]
margin_left = -104.0
margin_top = -114.0
margin_right = 189.0
margin_bottom = 155.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TiempoRestante" type="Label" parent="."]
margin_left = 6.34143
margin_top = 13.0135
margin_right = 110.341
margin_bottom = 89.0135
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cronometro" type="Timer" parent="."]
[connection signal="timeout" from="Cronometro" to="." method="_on_Cronometro_timeout"]
